--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.input{
+    width: 100%;
+    padding-left: 1rem/* 16px */;
+    padding-right: 1rem/* 16px */;  
+    padding-top: 0.5rem/* 8px */;
+    padding-bottom: 0.5rem/* 8px */; 
+    border-radius: 0.25rem/* 4px */;   
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
