--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,42 @@
     outline: 2px solid transparent;
     outline-offset: 2px;
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .modal-content {
+    background-color: rgb(225, 183, 227);
+    width: 50%;
+    height: 50%;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  .modal textarea {
+    width: 100%;
+    height: 100px;
+    padding: 5px;
+    outline: none;
+    resize: none;
+    margin-bottom: 10px;
+  }
+  
+  .modal-actions {
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .modal-actions button {
+    margin-left: 10px;
+  }
+  
